// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge Component > Rendering > Snapshots > matches all sizes snapshot 1`] = `
<div
  data-testid="sizes-container"
>
  <div
    class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground shadow hover:bg-primary/80 px-2 py-0.5 text-xs"
  >
    Small
  </div>
  <div
    class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground shadow hover:bg-primary/80 px-2.5 py-0.5 text-xs"
  >
    Default
  </div>
  <div
    class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground shadow hover:bg-primary/80 px-3 py-1 text-sm"
  >
    Large
  </div>
</div>
`;

exports[`Badge Component > Rendering > Snapshots > matches all variants snapshot 1`] = `
<div
  data-testid="variants-container"
>
  <div
    class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground shadow hover:bg-primary/80 px-2.5 py-0.5 text-xs"
  >
    Default
  </div>
  <div
    class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground shadow hover:bg-destructive/80 px-2.5 py-0.5 text-xs"
  >
    Destructive
  </div>
  <div
    class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground px-2.5 py-0.5 text-xs"
  >
    Outline
  </div>
  <div
    class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 px-2.5 py-0.5 text-xs"
  >
    Secondary
  </div>
</div>
`;

exports[`Badge Component > Rendering > Snapshots > matches default snapshot 1`] = `
<div
  class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground shadow hover:bg-primary/80 px-2.5 py-0.5 text-xs"
>
  Default
</div>
`;
